# titanrt

./: .gitignore  Cargo.toml  README.md
benches/: runtime_hot_loop.rs
example/: Cargo.toml
example/src/: connector.rs  main.rs  model2.rs  test_model.rs  test_model_2.rs
src/: config.rs  lib.rs  model.rs  prelude.rs  runtime.rs  test.rs
src/adapter/: connector.rs  descriptor.rs  errors.rs  mod.rs  runner.rs  spawner.rs  stream.rs
src/bridges/: mod.rs  nats.rs
src/connector/: base.rs  descriptor.rs  errors.rs  hook.rs  mod.rs  runner.rs  spawner.rs  stream.rs
src/connector/features/: mod.rs
src/connector/features/composite/: connector.rs  inner.rs  mod.rs
src/connector/features/composite/stream/: action.rs  event.rs  filter.rs  hooks.rs  mod.rs  slot.rs  spawner.rs  spec.rs  wrapper.rs
src/connector/features/grpc/: client.rs  codec.rs  connector.rs  grpcbin.rs  mod.rs
src/connector/features/grpc/stream/: actions.rs  codec.rs  descriptor.rs  event.rs  handle_bidi.rs  handle_client.rs  handle_server.rs  mod.rs  runner.rs  utils.rs
src/connector/features/http/: client.rs  config.rs  connector.rs  mod.rs
src/connector/features/http/stream/: actions.rs  descriptor.rs  event.rs  runner.rs
src/connector/features/reqwest/: client.rs  connector.rs  mod.rs  rate_limiter.rs
src/connector/features/reqwest/stream/: actions.rs  descriptor.rs  event.rs  mod.rs  runner.rs
src/connector/features/shared/: actions.rs  clients_map.rs  events.rs  mod.rs  rate_limiter.rs
src/connector/features/tonic/: client.rs  connector.rs  grpcbin.rs  mod.rs
src/connector/features/tonic/stream/: actions.rs  descriptor.rs  event.rs  handle_bidi.rs  handle_client.rs  handle_server.rs  runner.rs  utils.rs
src/connector/features/tonic/streaming/: actions.rs  codec.rs  descriptor.rs  event.rs  handle_bidi.rs  handle_client.rs  handle_server.rs  mod.rs  runner.rs  utils.rs
src/connector/features/tonic/unary/: actions copy.rs  actions.rs  codec.rs  descriptor.rs  event.rs  mod.rs  runner.rs
src/connector/features/websocket/: action.rs  client.rs  connector.rs  descriptor.rs  event.rs  mod.rs  runner.rs
src/connector/features/websocket/stream/: actions.rs  descriptor.rs  event.rs  message.rs  mod.rs  runner.rs
src/control/: controller.rs  inputs.rs  mod.rs  policy.rs
src/error/: mod.rs
src/io/: base.rs  mod.rs  mpmc.rs  ringbuffer.rs
src/utils/: backoff.rs  cancel_token.rs  config_io.rs  core_pinner.rs  encoder.rs  floatings.rs  health_flag.rs  logger.rs  min_max.rs  mod.rs  params_io.rs  pipeline.rs  request_manager.rs  route_matcher.rs  sampler.rs  shared_str.rs  smart_iter.rs  state.rs  str_tokens.rs
src/utils/crypto/: mod.rs
src/utils/time/: mod.rs  time_unit.rs  timeframe.rs  timestamp.rs
