[package]
name = "titanrt"
version = "0.5.2"
edition = "2024"
authors = ["Ruslan Gnatovsky <rgnatovsky@gmail.com>"]
description = "Typed reactive runtime for real-time systems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rgnatovsky/titanrt"
documentation = "https://docs.rs/titanrt"
keywords = ["reactive", "runtime", "hft", "streams", "trading"]
categories = ["concurrency", "data-structures", "network-programming"]
readme = "README.md"
exclude = ["/.github", "/.vscode", "/.idea", "/target"]

[dependencies]
ringbuf = { version = "0.4.8" }
anyhow = "1.0.98"
arc-swap = "1.7.1"
core_affinity = "0.8.3"
crossbeam = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
ahash = "0.8.12"
signal-hook = "0.3.18"
chrono = "0.4.41"
regex = "1.11.1"
rand = "0.9.2"
bytes = { version = "1.10.1", features = ["serde"] }
config = "0.15"
dotenvy = "0.15.7"
reqwest = { version = "0.12.23", optional = true }
tokio = { version = "1.47.1", features = [
    "time",
    "rt",
    "net",
    "macros",
    "signal",
    "sync",
    "rt-multi-thread",
] }
tracing-subscriber = "0.3.20"
tracing-appender = "0.2"
serde_urlencoded = { version = "0.7.1", optional = true }
futures = "0.3.31"
async-nats = { version = "0.42.0", optional = true }
tonic = { version = "0.14.2", features = [
    "transport",
    "tls-ring",
    "tls-native-roots",
], optional = true }
rustls = { version = "0.23.31", default-features = false, features = ["ring"] }
tungstenite = { version = "0.21", default-features = false, features = [
    "rustls-tls-webpki-roots",
    "handshake",
], optional = true }
url = "2"
prost = { version = "0.14.1", optional = true }
prost-types = { version = "0.14.1", optional = true }


[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "runtime_hot_loop"
harness = false

[features]
default = ["connector", "reqwest_conn", "tonic_conn", "websocket"]
connector = []
reqwest_conn = ["reqwest", "serde_urlencoded", "shared"]
tonic_conn = ["tonic", "prost", "prost-types", "shared"]
nats_bridge = ["async-nats"]
shared = []
websocket = ["tungstenite"]
